# better-abc

./: .gitignore  LICENSE  README.md  setup.cfg
better_abc/: __init__.py
