[metadata]
name = better-abc
version = 0.0.1
description = Python ABC plus abstract attributes
long_description = file: README.md
url = https://www.github.com/shonin/better-abc
author = Shonin
author_email = emc@hey.com
license = BSD-3-Clause
keywords = python, abc, better, abstract
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
include_package_data = true
packages = find: